# almel

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yaml  rust.yaml  test.yaml
src/: almel.yaml  color.rs  config.rs  config.yaml  context.rs  env.rs  glyph.rs  init.rs  init.zsh  main.rs  opt.rs  prompt.rs  shell.rs
src/configs/: almel.yaml  directory.rs  duration.rs  git_repo.rs  git_user.rs  mod.rs  os.rs  shell.rs  status.rs  time.rs  user.rs  venv.rs
src/init/: almel-async.zsh  almel.bash  almel.fish  almel.zsh  mod.rs
src/segments/: dir.rs  directory.rs  duration.rs  exit_status.rs  git.rs  git_repo.rs  git_user.rs  host.rs  mod.rs  newline.rs  os.rs  shell.rs  status.rs  time.rs  user.rs  venv.rs
src/segments/git/: git_user.rs  head_status.rs  mod.rs  user.rs
src/segments/git_repo/: mod.rs  status_git2.rs
