[package]
name = 'almel'
version = '1.1.6'
authors = ['Ryooooooga <ryoga_314@yahoo.co.jp>']
description = 'A ZSH theme inspired by agnoster-zsh-theme'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/Ryooooooga/almel'
keywords = [
    'zsh',
    'prompt',
]
edition = '2018'

[dependencies]
chrono = '0.4'
dirs = '2.0'
failure = '0.1'
hostname = '0.2'
lazy_static = '1.4'
serde_yaml = '0.8'
structopt = '0.3'

[dependencies.ansi_term]
version = '0.12'
features = ['derive_serde_style']

[dependencies.git2]
version = '0.11'
default-features = false

[dependencies.serde]
version = '1.0'
features = ['derive']
[target."cfg(not(windows))".dependencies]
users = '0.9'
