[package]
name = 'almel'
version = '1.4.6'
authors = ['Ryooooooga <eial5q265e5@gmail.com>']
description = 'A ZSH theme inspired by agnoster-zsh-theme'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/Ryooooooga/almel'
keywords = [
    'zsh',
    'prompt',
]
edition = '2021'

[dependencies]
anyhow = '1.0'
chrono = '0.4'
dirs = '4.0'
hostname = '0.3'
serde_yaml = '0.8'
structopt = '0.3'

[dependencies.ansi_term]
version = '0.12'
features = ['derive_serde_style']

[dependencies.git2]
version = '0.16'
default-features = false

[dependencies.serde]
version = '1.0'
features = ['derive']
[target."cfg(not(windows))".dependencies]
users = '0.11'
